# sqldelight_bazel_rules

./: BUILD.bazel  BUILD.release.bazel  README.md  WORKSPACE  sqldelight.bzl
.github/workflows/: CI.yml  release.yml
actions/: BUILD.bazel
actions/java/com/squareup/tools/sqldelight/cli/: Args.kt  BUILD.bazel  CompilerWrapper.kt  Main.kt  Utils.kt
actions/javatests/com/squareup/tools/sqldelight/cli/: ArgsTest.kt  BUILD.bazel
samples/: BUILD.bazel
samples/dialect/: BUILD.bazel  README.md  WORKSPACE
samples/dialect/src/main/java/sqldelight/bazel/rules/samples/: VariableAttribute.java
samples/trivial/: BUILD.bazel  README.md  WORKSPACE
samples/trivial/tools/: bazel
scripts/: BUILD.bazel  bazel.sample.wrapper.sh  intellij.bzl  jarjar.bzl  maven.bzl  release.bzl  repositories.bzl  versions.bzl
tests/: auto_module.bzl  manual_module.bzl  manual_module_bad_input.bzl  setup.bzl  src_dir_not_in_path.bzl  test_suite.bzl
