load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "define_kt_toolchain")
load("@rules_sqldelight//scripts:release.bzl", "release_archive")
load("//:tests/test_suite.bzl", "sqldelight_test_suite")

java_binary(
    name = "sqldelightc",
    main_class = "com.squareup.tools.sqldelight.cli.MainKt",
    visibility = ["//:__subpackages__"],
    runtime_deps = ["@rules_sqldelight//scripts:sqldelightc_shrunk"],
)

release_archive(
    name = "rules_sqldelight_release",
    src_map = {
        "sqldelight.bzl": "sqldelight.bzl",
        "BUILD.release.bazel": "BUILD.bazel",
        "WORKSPACE.release.bazel": "WORKSPACE",
        "//scripts:sqldelightc_shrunk": "sqldelight_compiler.jar",
    },
)

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "1.4",
    jvm_target = "1.8",  # proguard demands.
    language_version = "1.4",
)

sqldelight_test_suite(name = "sqldelight_tests")
