# Copyright (C) 2021 Square, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
# in compliance with the License. You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License
# is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
# or implied. See the License for the specific language governing permissions and limitations under
# the License.
load("@rules_sqldelight//scripts:jarjar.bzl", "jar_jar")

java_binary(
    name = "jarjar_runner",
    main_class = "org.pantsbuild.jarjar.Main",
    visibility = ["//:__subpackages__"],
    runtime_deps = ["@maven_sqldelight_tooling//org/pantsbuild:jarjar"],
)

jar_jar(
    name = "sqldelightc_shrunk",
    input_jar = "//actions:sqldelightc_deploy.jar",
    rules = "sqldelight.jarjar",
    visibility = ["//:__subpackages__"],
)
