# Copyright (C) 2021 Square, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
# in compliance with the License. You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License
# is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
# or implied. See the License for the specific language governing permissions and limitations under
# the License.
load("@rules_sqldelight//:sqldelight.bzl", "sqldelight_codegen")
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "define_kt_toolchain", "kt_jvm_library")

kt_jvm_library(
    name = "library",
    srcs = glob(["src/main/java/**/*.java"]) + [":generated_sources"],
    deps = [
        "@maven//com/squareup/sqldelight:jdbc-driver",
    ],
)

sqldelight_codegen(
    name = "generated_sources",
    package_name = "sqldelight.bazel.rules.samples",
    srcs = ["src/main/sqldelight/sqldelight/bazel/rules/samples/oneFourZero.sq"],
    database_dialect = "MYSQL",
    src_dir = "src/main/sqldelight",
)

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "1.4",
    jvm_target = "1.8",  # proguard demands.
    language_version = "1.4",
)
