load("@rules_sqldelight//:sqldelight.bzl", "sqldelight_codegen")
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "define_kt_toolchain", "kt_android_library")

kt_android_library(
    name = "library",
    srcs = glob(["src/main/java/**/*.java"]) + [":generated_sources"],
    deps = [
        "@maven_sqldelight//androidx/sqlite",
        "@maven_sqldelight//androidx/sqlite:sqlite-ktx",
        "@maven_sqldelight//com/squareup/sqldelight:android-driver",
        "@maven_sqldelight//com/squareup/sqldelight:core",
    ],
)

sqldelight_codegen(
    name = "generated_sources",
    package_name = "sqldelight.bazel.rules.samples",
    srcs = ["src/main/sqldelight/sqldelight/bazel/rules/samples/oneFourZero.sq"],
    src_dir = "src/main/sqldelight",
)

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "1.4",
    jvm_target = "1.8",  # proguard demands.
    language_version = "1.4",
)
