load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "ArgsTest",
    srcs = ["ArgsTest.kt"],
    friends = ["//actions/java/com/squareup/tools/sqldelight/cli"],
    deps = [
        "@maven_sqldelight//com/xenomachina:kotlin-argparser",
        "@maven_sqldelight//junit",
    ],
)
